# SDALib

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md
.github/workflows/: Code Coverage.yml  cmake.yml  code-coverage-linux.yml  code-coverage-windows.yml  code-coverage.yml  linter.yml  test-linux.yml  test-windows.yml  test.yml
SDALib-CPP/: .gitignore  AIData.h  CMakeLists.txt  SDAAction.cpp  SDAAction.h  SDAData.h  SDADriver.cpp  SDADriver.h  coverage.bat  main
SDALib-CPP/ReplayData/: bbRecording20220330-123618.txt
SDALib-CPP/SDALib-CPP/: CMakeLists.txt  IPCPointerManager.cpp  IPCPointerManager.h  SDAAction.cpp  SDAAction.h  SDAAction.hpp  SDAData.cpp  SDAData.h  SDAData.hpp  SDADriver.cpp  SDADriver.hpp  SDADriver.inl  SDASpeedDreams.cpp  SDASpeedDreams.h  SDASpeedDreams.hpp  SDAUtils.hpp  SDA_portability.h
SDALib-CPP/SDALib-Python/: CMakeLists.txt  Driver.py  DriverTest.py  PythonDriver.cpp  PythonDriver.h  PythonDriver.inl  SDATypes.py  SDATypesConverter.cpp  SDATypesConverter.h  SetupPythonSpeedDreams.py  SpeedDreamsFunction.py  SpeedDreamsPython.c  SpeedDreamsPython.cpp  SpeedDreamsPython.h  setup(deprecated).py  setup.py  setup.py.in
SDALib-CPP/SDALibTests/: CMakeLists.txt  DriverTest.py  GeneratorUtils.cpp  GeneratorUtils.h  PythonDriverTest.cpp  PythonSDATypeTest.cpp  Random.hpp  SDAActionTest.cpp  SDADataTest.cpp  SDADriverTest.cpp  SDATypesConverterTest.cpp  SDATypesFail.py  Utils.h
SDALib-CPP/SDALibTests/Mocks/: PointerManagerMock.h  PythonDriverMock.h  SDAActionMock.h  SDADataMock.h  SDADriverMock.h
SDALib-CPP/SDAReplay/: CMakeLists.txt  ReplayAction.h  ReplayData.h  ReplayDriver.h  ReplayMain.cpp
SDALib-CPP/Samples/: CMakeLists.txt
SDALib-CPP/Samples/SDABrakeSample/: BrakeSampleAction.h  BrakeSampleData.h  BrakeSampleDriver.h  CMakeLists.txt  SDABrakeSample.cpp
SDALib-CPP/Samples/SDASteerSample/: CMakeLists.txt  SDASteerSample.cpp  SteerSampleAction.h  SteerSampleData.h  SteerSampleDriver.h
SDALib-CPP/SpeedDreams/: CMakeLists.txt  SDConstants.hpp  SDStructs.cpp  SDStructs.hpp
SDALib-CPP/SpeedDreams/math/: CMakeLists.txt  SGGeoc.h  SGGeod.h  SGMisc.h  sg_geodesy.h  vector.h
SDALib-CPP/SpeedDreams/portability/: CMakeLists.txt  portability.h
SDALib-CPP/SpeedDreams/robottools/: CMakeLists.txt  robottools.h  rttrack.cpp
SDALib-CPP/SpeedDreams/simuv4/: CMakeLists.txt  car.cpp  collide.cpp  sim.h  simu.cpp
SDALib-CPP/SpeedDreams/tgf/: CMakeLists.txt  linuxspec.cpp  modinfo.h  params.cpp  tgf.cpp  tgf.h  trace.cpp  windowsspec.cpp
SDALib-CPP/cmake/: FindMYSQL.cmake  FindPLIB.cmake  FindSOLID.cmake  SDAMacros.cmake
libraries/include/: Socket.h  ipclib_portability.h
libraries/lib/: boost_python310-vc143-mt-gd-x32-1_78.lib  boost_python310-vc143-mt-x32-1_78.lib  libboost_python310-vc143-mt-x32-1_78.lib
