ADD_LIBRARY (SDALib STATIC "SDADriver.hpp" "SDAAction.hpp" "SDADriver.cpp" "../SpeedDreams/SDStructs.hpp" "SDAData.hpp")

include(GenerateExportHeader)
GENERATE_EXPORT_HEADER(SDALib)

TARGET_LINK_LIBRARIES(SDALib ${IPCLIB_LIBRARY} msgpackc-cxx math SpeedDreamsLib simu)

TARGET_INCLUDE_DIRECTORIES(SDALib PUBLIC ${IPCLIB_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${CMAKE_BINARY_DIR}/SDALib-CPP ${CMAKE_SOURCE_DIR}/SpeedDreams/math ${CMAKE_SOURCE_DIR}/SpeedDreams ${CMAKE_SOURCE_DIR}/SpeedDreams/simuv4) 

set_target_properties(SDALib PROPERTIES LINKER_LANGUAGE CXX)

INSTALL(TARGETS SDALib)
INSTALL(FILES ${SDALIB_HEADERS} ${CMAKE_BINARY_DIR}/SDALib-CPP/sdalib_export.h DESTINATION include)

FILE(GLOB SDA_MACROS ${CMAKE_SOURCE_DIR}/cmake/*.cmake)
INSTALL(FILES ${SDA_MACROS} DESTINATION SDAMacros)